--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/vite": "^4.0.11",
+    "express": "^4.21.2",
     "flowbite": "^3.1.2",
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
