--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "empleatufront",
+  "name": "empleatetufront",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,25 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tabler/icons-react": "^3.31.0",
-    "@tailwindcss/vite": "^4.0.11",
-    "express": "^4.21.2",
+    "@tabler/icons-react": "^3.30.0",
+    "@tailwindcss/vite": "^4.0.0",
     "flowbite": "^3.1.2",
-    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
-    "react-router-dom": "^7.3.0",
-    "tailwindcss": "^4.0.11",
+    "react-router-dom": "^7.1.3",
+    "tailwindcss": "^4.0.0",
     "temporal-polyfill": "^0.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
-    "@types/node": "^22.13.9",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "esbuild": "^0.17.19",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
