--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-VITE_API_URL_BASE="http://localhost:3000/api"
-TURSO_APP_URL_BASE="libsql://empleatu-roialv.turso.io"
+VITE_API_URL_BASE="libsql://empleatu-roialv.turso.io"
